--- a/main/templates/auth/vaccines.html
+++ b/main/templates/auth/vaccines.html
@@ -59,19 +59,10 @@
   </div>
 </div>
 
-{% comment %} <div class="card vac-card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title text-center">Vacc Name</h5>
-    <p class=" fs-4 text-success">Application: <br> Sept. 15, 2023  <i class="fa-solid fa-crutch"></i></p>
-    <p class=" fs-4 text-danger">Expiration:<br> Sept. 15, 2023  <i class="fa-solid fa-clock-rotate-left"></i></p>
-    <button type="button" class="btn btn-secondary">Update</button>
-      <button type="button" class="btn btn-danger">Delete</button>
-  </div>
-  
-</div> {% endcomment %}
-{% comment %} Modal Final {% endcomment %}
 
-<div class="containr">
+{% comment %} Modal Final {% endcomment %}
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Open modal for @mdo</button>
+<div class="container">
   <div class="row">
     {% for vaccine in pet_vaccines %}
       <div class="col-md-6">
