--- a/main/templates/auth/appo.html
+++ b/main/templates/auth/appo.html
@@ -1,14 +1,69 @@
 {% extends 'adminLayout.html' %}
+
 {% load static %}
 
 
 {% block body %}
-<a  class="btn-3" href="{% url "history" id=pet_id %}" type="button"><i class="fa-solid fa-backward"></i> Back to Main Menu  </a>
-<div class="container">
+<!-- Modal -->
+<div class="modal fade" id="addHistory" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Edit Appointment</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form id="historyForm" >
+            {% csrf_token %}
+            <div class="mb-3">
+              <label for="subject" class="col-form-label">Subject:</label>
+              <input type="text" class="form-control" id="subject" name="subject" >
+            </div>
+            <div class="mb-3">
+              <label for="doctor" class="col-form-label">Doctor:</label>
+              <input type="text" class="form-control" id="doctor" name="doctor" >
+            </div>
+            <div class="mb-3">
+              <label for="date" class="col-form-label">Date:</label>
+              <input type="date" class="form-control" id="date" name="date"  max="{{date}}">
+          </div>
+          <div class="mb-3">
+            <label for="description" class="col-form-label">Description:</label>
+            <div class="form-floating">
+              <textarea class="form-control" placeholder="Leave a comment here" id="description" name="description" style="height: 100px"></textarea>
+              <label >Here you can put the doctor comments</label>
+            </div>
+        </div>
+
+        <div class="mb-3">
+          <label for="prescription" class="col-form-label">Prescription:</label>
+          <div class="form-floating">
+            <textarea class="form-control" placeholder="Leave a comment here" id="prescription" name="prescription" style="height: 100px"></textarea>
+            <label >You can leave it blank</label>
+          </div>
+      </div>
+          
+            <input type="hidden" value="{{pet.id}}" id="petid" name="petid">
+          
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="historySubmit">Add</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal -->
+
+
+<a  class="btn-3" href="{% url "history" id=pet_id %}" type="button"><i class="fa-solid fa-backward"></i> Back  </a>
+<div class="container mb-4">
 
 
     <h1 class="text-center">{{appo.date}}</h1>
     <h3>Subject: {{appo.subject}}</h3>
+    <h3>Doctor: {{appo.doctor}}</h3>
 
     <div class="mt-4">
         <h4>Description:</h4>
@@ -17,10 +72,34 @@
         <p>{{appo.prescription}}</p>
 
     </div>
-
-
 </div>
+
+
+
+    <div class="container mt-4">
+        <button data-bs-toggle="modal" data-bs-target="#addHistory" data-subject="{{appo.subject}}" data-doctor="{{appo.doctor}}"
+         data-date="{{appo.date}}" 
+         data-description="{{appo.description}}" data-prescription="{{appo.prescription}}"
+         type="button" class="btn btn-info" id="editSubmit">
+            
+        Edit <i class="fa-solid fa-pen-to-square"></i></button>
+
+
+        <button type="button" class="btn btn-danger"> Delete <i class="fa-solid fa-trash"></i></i></button>
+
+    </div>
 {% endblock body %}
+
+
+{% block script %}
+<script src="{% static 'pets/js/history.js' %}"></script>
+<script src="https://kit.fontawesome.com/6c76bbdb90.js" crossorigin="anonymous"></script>
+
+{% endblock script %}
+
+
+
+
 
 
 
