--- a/main/templates/auth/pet.html
+++ b/main/templates/auth/pet.html
@@ -30,10 +30,10 @@
    </div>
 </a>
 
-<a href="{% url 'vaccines' id=pet.id %}">
+<a href="{% url 'weightControl' id=pet.id %}">
    <div class="actions mb-3"> 
       <div >
-         <h5 class="pet-title text-center text-white">Weight and Growth Record <i class="fa-solid fa-weight-scale"></i></h5>
+         <h5 class="pet-title text-center text-white">Weight Control <i class="fa-solid fa-weight-scale"></i></h5>
       </div>
    </div>
 </a>
