--- a/main/templates/adminLayout.html
+++ b/main/templates/adminLayout.html
@@ -19,7 +19,10 @@
     <div class="barra">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="/home">    <div class="brand">
+                <h4 class="text-gradient">PetTrack  <i class="fa-solid fa-paw"></i> </h4>
+                <p class="slogan">Keeping your pets on track</p>
+            </div></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -29,13 +32,7 @@
                     <a class="nav-link active" aria-current="page" href="/home">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link" href="#">Profile</a>
                   </li>
                 </ul>
               </div>
@@ -45,8 +42,9 @@
 <div class=" main-container">
     <aside>
         <div class="brand">
+          <a href="/home"> 
             <h4 class="text-gradient">PetTrack  <i class="fa-solid fa-paw"></i> </h4>
-            <p class="slogan">Keeping your pets on track</p>
+            <p class="slogan">Keeping your pets on track</p></a>
         </div>
         <button class="menu-btn">
            
