--- a/main/templates/auth/history.html
+++ b/main/templates/auth/history.html
@@ -12,7 +12,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <form id="historyForm" >
+          <form id="historyForm" enctype="multipart/form-data" >
             {% csrf_token %}
             <div class="mb-3">
               <label for="subject" class="col-form-label">Subject:</label>
