--- a/main/templates/auth/pet.html
+++ b/main/templates/auth/pet.html
@@ -24,7 +24,7 @@
    </div>
 </a>
 
-<a href="{% url 'vaccines' id=pet.id %}">
+<a href="{% url 'medications' id=pet.id %}">
    <div class="actions mb-3"> 
       <div >
          <h5 class="pet-title text-center text-white">Medications  <i class="fa-solid fa-capsules"></i></i></h5>
