--- a/main/templates/auth/weightControl.html
+++ b/main/templates/auth/weightControl.html
@@ -8,7 +8,11 @@
 
 <div class="container mt-4">
   <h1 class="text-center">Weight Control</h1>
+
+  <div class="mt-4">
     <button class="btn-2" data-bs-toggle="modal" data-bs-target="#exampleModal" type="button">Add a new record +</button>
+  </div>
+
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
