--- a/main/templates/auth/home.html
+++ b/main/templates/auth/home.html
@@ -47,6 +47,10 @@
             </select>
           </div>
           <div class="mb-3">
+            <label for="breed" class="col-form-label">Breed:</label>
+            <input type="text" class="form-control" id="breed" name="breed" >
+          </div>
+          <div class="mb-3">
             <label for="weight" class="col-form-label">Weight (lbs):</label>
             <input type="number" class="form-control" id="weight" name="weight">
           </div>
