--- a/main/templates/auth/pet.html
+++ b/main/templates/auth/pet.html
@@ -40,6 +40,15 @@
    </div>
 </a>
 
+<a href="{% url 'weightControl' id=pet.id %}">
+   <div class="actions mb-3"> 
+      <div >
+         <h5 class="pet-title text-center text-white">Pet Information <i class="fa-solid fa-shield-cat"></i></h5>
+      </div>
+   </div>
+</a>
+
+
 
 
 
