--- a/main/templates/auth/medications.html
+++ b/main/templates/auth/medications.html
@@ -104,7 +104,7 @@
             <button type="button" class="btn btn-secondary" type="button" data-bs-toggle="modal"
             data-bs-target="#editModal" data-name="{{register.name}}" data-frequency="{{register.frequency}}" data-id="{{register.id}}">Update</button>
 
-          <button type="button" class="btn btn-danger deleteBtns" >Delete</button>
+          <button type="button" class="btn btn-danger deleteBtns" data-id="{{register.id}}" >Delete</button>
            
           </div>
         </div>
