--- a/main/templates/auth/home.html
+++ b/main/templates/auth/home.html
@@ -90,7 +90,7 @@
             <div class="editPet" data-bs-toggle="modal" data-bs-target="#exampleModal" data-petid="{{ pet.id }}" data-name="{{pet.name}}"
             data-birth="{{pet.birth}}" data-sex="{{pet.sex}}" data-breed="{{pet.breed}}" data-weight="{{pet.weight}}" data-specie="{{pet.specie}}"
             > <i class="fa-solid fa-pen-to-square"></i></div>
-            <div class="deletePet" data-pet-id="{{ pet.id }}"> <i class="fa-solid fa-trash"></i></div>
+            <div class="deletePet" data-id="{{ pet.id }}"> <i class="fa-solid fa-trash"></i></div>
           </div>
         </div>
       </div>
@@ -111,9 +111,10 @@
 
 
 {% block script %}
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="{% static 'pets/js/pet.js' %}"></script>
+
 {% endblock script %}
 
 
