--- a/main/templates/auth/pet.html
+++ b/main/templates/auth/pet.html
@@ -40,7 +40,7 @@
    </div>
 </a>
 
-<a href="{% url 'weightControl' id=pet.id %}">
+<a href="{% url 'petInfo' id=pet.id %}">
    <div class="actions mb-3"> 
       <div >
          <h5 class="pet-title text-center text-white">Pet Information <i class="fa-solid fa-shield-cat"></i></h5>
