--- a/main/static/pets/styles.css
+++ b/main/static/pets/styles.css
@@ -358,3 +358,21 @@ input[type="date"]{
   justify-content: space-evenly;
   align-items: center;
 }
+
+.pet-name{
+  color:  #525FE1;
+  font-weight: 900;
+  ;
+}
+
+.pet-span{
+  color:  #525FE1;
+  font-weight: bolder;
+  font-size: 30px;
+  margin-right: 8px;
+}
+.petInformation{
+  color: black;
+  font-weight: bolder;
+  font-size: 25px;
+}
