--- a/main/templates/auth/home.html
+++ b/main/templates/auth/home.html
@@ -1,7 +1,7 @@
 {% extends 'adminLayout.html' %}
 {% load static %}
 {% block body %}
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Add new pet</button>
+<button type="button" class="btn-2 " data-bs-toggle="modal" data-bs-target="#exampleModal">Add new pet +</button>
 
 
 
