--- a/main/templates/auth/petInfo.html
+++ b/main/templates/auth/petInfo.html
@@ -19,8 +19,9 @@
   
 </div>
 </div>
-
-<button id="printButton">Generar PDF</button>
+<div class="container-sm d-flex justify-content-center align-items-center flex-column mt-4" >
+<button id="printButton" class="btn-2">Download PDF <i class="fa-solid fa-download"></i></button>
+</div>
 
 
 {% endblock body %}
