--- a/main/templates/auth/profile.html
+++ b/main/templates/auth/profile.html
@@ -1,8 +1,16 @@
 {% extends "adminLayout.html" %}
 {% block body %}
 <div class="container mt-4">
-    <h1>Admin</h1>
-    <p>{{user.first_name}}</p>
+    <h1 class="text-center">User Information</h1>
+
+    <p class="petInformation"> <span class="pet-span">Name:</span> {{user.first_name}}</p>
+    <p class="petInformation"> <span class="pet-span">Email:</span> {{user.username}}</p>
+
+    <div class="actions">
+        <a href="/admin/users/{{user.id}}/edit" class="btn btn-primary">Logout</a>
+        <a href="/admin/users/{{user.id}}/delete" class="btn btn-danger">Change Password</a> 
+    <div>
+
 
 </div>
 {% endblock body %}
