--- a/main/templates/login/forgot.html
+++ b/main/templates/login/forgot.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends "layout.html" %}
 
 {% block body %}
 
@@ -9,6 +9,7 @@
         <p class="slogan">Keeping your pets on track </p>
 
     </div>
+    <h2 class="text-center">Change Password</h2>
 
     <div class="form">
       {{error}}
@@ -20,14 +21,7 @@
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
           
         </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1"name="password">
-        </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
+       
         <button type="submit" class="btn-custom">Submit</button>
       </form>
     </div>
@@ -35,7 +29,7 @@
     <div class="nav-links">
 
       <a href="{% url 'register' %}">Don't have an account?</a>
-      <a href="{% url "forgot" %}">Forgot password?</a>
+      <a href="{% url "index" %}">Login</a>
     </div>
 </div>
 
