--- a/main/templates/login/register.html
+++ b/main/templates/login/register.html
@@ -48,7 +48,7 @@
     <div class="nav-links">
 
       <a href="{% url 'index' %}">Login</a>
-      <a href="">Forgot password?</a>
+      <a href="{% url "forgot" %}">Forgot password?</a>
     </div>
 </div>
 
